@@ -44,6 +44,7 @@ Below the properties, is the content. This is where you specify information abou
 <li><b>Alt Tag:</b> Text field where you can enter an alt tag to associate with your media. Alt tags are displayed on a web page when the image is not available or spoken by a screen reader.</li>
 <li><b>Notes:</b> Optional field where you can enter information about the image that will not be displayed in the story.</li>
 <li><b>Contributors:</b> A contributor can be any person, ex. Writer or photographer who contributed to the Media. Click on <i>Edit Contributors</i>  to associate, or un-associate your contributors. See <a href="help.pl?topic=contributor_associate" class="helplink">Associate Contributors</a> for additional help.</li>
+<li><b>Content:</b> Starting with Krang v3.01, media files containing text content can be edited online rather than uploaded.</li> 
 </ul>
 
 <h3>Actions</h3>
