@@ -1,14 +1,14 @@
 <tmpl_include help_header.tmpl>
 <h2>New Media</h2>
 <p>
-The New Media page is used to upload media, such as images (.jpg, .gif) and video, for use in your stories.  Any media that you want to display with your story has to be uploaded to Krang. Fields marked with an asterisk (*) are required fields and must be entered.
+The New Media page is used to upload or create media, such as images (.jpg, .gif) and video, for use in your stories.  Any media that you want to display with your story has to be uploaded to Krang. Fields marked with an asterisk (*) are required fields and must be entered.
 </p>
 
 <ul>
 <li><b>Type:</b> Each Media has a Type. This is set by the CMS on creation of a New Media and is not an editable field. If you selected the incorrect Media Type, you will need to return to 'New Media.' Media Type selection determines the attributes available to the Media.</li>
 <li><b>Title:</b> Required field used to give your image a unique name.</li>
 <li><b>Site/Categories:</b>	  Required field used to designate the URL of the site or category where you want to upload your media. Clicking the <i>Choose</i> button will launch a menu tree where you can find the correct category. From the menu tree click <i>OK</i> to accept your choice and close the function or <i>Cancel</i> to return to the New Media page.</li>
-<li><b>Upload File:</b>  Click on <i>Browse</i> to find an image or other media you would like to upload. This is a required field.</li>
+<li><b>Upload File:</b>  Click on <i>Browse</i> to find an image or other media you would like to upload. If you leave this field blank, Krang will attempt to create an empty file named after the Title you have entered.</li>
 <li><b>Default Caption:</b> Text field where you can enter a default caption to associate with your media. This is an optional field and may not appear within the output depending on the template configuration.</li>
 <li><b>Default Copyright:</b> Text field where you can enter a default copyright to associate with your media. This is an optional field and may not appear within the output depending on the template configuration.</li>
 <li><b>Alt Tag:</b> Text field where you can enter an alt tag to associate with your media. Alt tags are displayed on a web page when the image is not available or spoken by a screen reader.</li>
